deployment/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Tshpet\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-resolved.yaml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Tshpet\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-resolved.yaml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/peerprep-backend: "true"
        io.kompose.network/peerprep-frontend: "true"
        io.kompose.service: api-gateway
    spec:
      containers:
        - env:
            - name: MATCHING_BASE_URL
              value: http://matching-service:8001
            - name: QUESTION_BASE_URL
              value: http://question-service:5000
            - name: SECRET_KEY
              value: django-insecure-6&0xj1vstd4^_sgd#9vbn42bs4em$glhvkm5ba&8-(f8c$aa++
            - name: USER_BASE_URL
              value: http://user-service:8000
          image: api-gateway
          name: api-gateway
          ports:
            - containerPort: 3001
              hostPort: 3001
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
