deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: asia-southeast1-docker.pkg.dev/steam-bee-404110/peer-prep/frontend:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 512Mi
              cpu: '400m'
            requests:
              memory: 256Mi
              cpu: '400m'

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: asia-southeast1-docker.pkg.dev/steam-bee-404110/peer-prep/api-gateway:latest
          ports:
            - containerPort: 3001
          resources:
            limits:
              memory: 512Mi
              cpu: '400m'
            requests:
              memory: 256Mi
              cpu: '400m'

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres-db
          image: postgres:15.4
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: 512Mi
              cpu: '400m'
            requests:
              memory: 256Mi
              cpu: '400m'

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: asia-southeast1-docker.pkg.dev/steam-bee-404110/peer-prep/user-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: 512Mi
              cpu: '400m'
            requests:
              memory: 256Mi
              cpu: '400m'

---
