deployment/matching-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Tshpet\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-resolved.yaml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: matching-service
  name: matching-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: matching-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Tshpet\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-resolved.yaml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/peerprep-backend: "true"
        io.kompose.service: matching-service
    spec:
      containers:
        - env:
            - name: PORT
              value: "8001"
          image: matching-service
          name: matching-service
          ports:
            - containerPort: 8001
              hostPort: 8001
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
