deployment/question-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Tshpet\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-resolved.yaml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: question-service
  name: question-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: question-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Tshpet\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-resolved.yaml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/peerprep-backend: "true"
        io.kompose.service: question-service
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: mongodb://mongo-db:27017/questions
            - name: SECRET_KEY
              value: django-insecure-6&0xj1vstd4^_sgd#9vbn42bs4em$glhvkm5ba&8-(f8c$aa++
          image: question-service
          name: question-service
          ports:
            - containerPort: 5000
              hostPort: 5000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
