deployment/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Tshpet\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-resolved.yaml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: user-service
  name: user-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Tshpet\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f docker-compose-resolved.yaml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/peerprep-backend: "true"
        io.kompose.service: user-service
    spec:
      containers:
        - args:
            - python
            - manage.py
            - runserver
            - 0.0.0.0:8000
          image: user-service
          name: user-service
          ports:
            - containerPort: 8000
              hostPort: 8000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
