deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: loadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: frontend
  selector:
    app: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  type: loadBalancer
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: api-gateway
  selector:
    app: api-gateway

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  labels:
    app: postgres-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres-db
  selector:
    app: postgres-db

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: user-service
  selector:
    app: user-service

---
